--- a/Weitianshi/app.wxss
+++ b/Weitianshi/app.wxss
@@ -1422,15 +1422,36 @@ textarea {
   /* padding-bottom: 20rpx; */
 }
 
+#newSearch2 .search_search2 {
+  background: #f5f5f5;
+  border-radius: 92rpx;
+  width: 526rpx;
+  height: 64rpx;
+  margin-left: 32rpx;
+  margin-top: 16rpx;
+  line-height: 72rpx;
+  padding-left: 64rpx
+}
+#newSearch2 .screen {
+  position: fixed;
+  top: 0;
+  background: #fff;
+  width: 750rpx;
+  height: 80rpx;
+  font-size: 26rpx;
+  color: #666;
+  line-height: 80rpx;
+  text-align: left;
+  padding-bottom: 16rpx;
+}
 #newSearch .search_text {
-  font-size: 12px;
+  font-size: 24rpx;
   color: #999;
   letter-spacing: 0;
   text-align: left;
   padding-left: 16rpx;
   display: inline-block;
   height: 64rpx;
-  /* line-height: 30rpx; */
 }
 
 #newSearch .search_img {
@@ -1438,8 +1459,18 @@ textarea {
   height: 94rpx;
   background: #fff;
   position: relative;
-  /* top: 20rpx; */
   left: 20rpx;
+}
+#newSearch2 .search_word {
+  width: 94rpx;
+  height: 94rpx;
+  background: #fff;
+  position: relative;
+  line-height: 94rpx;
+  font-size: 32rpx;
+  color: #333;
+  left: 32rpx;
+  text-align: center;
 }
 
 #newSearch .search_img image {
@@ -1454,6 +1485,14 @@ textarea {
   display: block;
   margin-left: 30rpx;
   margin-top: 14rpx;
+}
+
+#newSearch2 .search_icon1 {
+  display: block;
+  position: absolute;
+  top: 22rpx;
+  left: 56rpx;
+  z-index: 9999;
 }
 
 .t-roundGroupTitle {
@@ -1509,5 +1548,5 @@ textarea {
 
 .t-carCom {
   font-size: 12px;
-  color: #333!important;
+  color: #333 !important;
 }
