--- a/Weitianshi/pages/myProject/publishProject/publishProject.wxss
+++ b/Weitianshi/pages/myProject/publishProject/publishProject.wxss
@@ -122,10 +122,8 @@ page {
   opacity: 0.9;
   width: 87%;
   height: 80rpx;
-  font-family: PingFangSC-Regular;
   font-size: 28rpx;
-  color: #666;
-  letter-spacing: 0;
+  color: #fff;
   line-height: 80rpx;
   padding: 0 48rpx;
 }
@@ -170,9 +168,12 @@ page {
 .projectContent {
   font-size: 28rpx;
   color: #ccc;
-  /* line-height: 28rpx; */
   text-align: right;
   margin-right: 12rpx;
+  width: 500rpx;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .arrowStyle {
@@ -360,7 +361,10 @@ page {
   line-height: 112rpx;
   width: 556rpx;
   font-size: 28rpx;
-  color: #ccc;
+  color: #333;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .otherInfo {
@@ -400,4 +404,9 @@ page {
   font-size: 24rpx;
   color: #333;
   text-align: center;
+}
+
+input:after {
+  font-size: 24rpx;
+  color: #333;
 }
