--- a/Weitianshi/app.wxss
+++ b/Weitianshi/app.wxss
@@ -1074,6 +1074,7 @@ textarea {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  text-align: left!important;
 }
 
 .t-record {
