--- a/Weitianshi/pages/discover/myFriend/myFriend.wxml
+++ b/Weitianshi/pages/discover/myFriend/myFriend.wxml
@@ -13,11 +13,11 @@
             <view class="t-introduceBox flex">
               <image src="{{item.user_avatar_url}}" class="t-userPic" wx:if="{{item.user_avatar_url}}"></image>
               <view class="t-userName">{{item.user_real_name}}</view>
-              <view class="t-userPart flex" wx:if="{{item.user_groups[0].group_title}}">
+              <view class="t-userPart flex" wx:if="{{item.authentication.group_title}}">
                 <!-- <image src="/img/icon-renzheng@2x.png" class="t-renzheng"></image>
           <view class="t-userPart1">{{item.authentication[0].group_title}}</view> -->
-                <image class="t-renzheng" wx:if="{{item.user_groups[0].group_title=='投资方'}}" src="/img/img-touziren@2x.png"></image>
-                <image class="t-renzheng" wx:if="{{item.user_groups[0].group_title=='买方FA'}}" src="/img/img-maifang1@2x.png"></image>
+                <image class="t-renzheng" wx:if="{{item.authentication.group_title=='投资方'}}" src="/img/img-touziren@2x.png"></image>
+                <image class="t-renzheng" wx:if="{{item.authentication.group_title=='买方FA'}}" src="/img/img-maifang1@2x.png"></image>
               </view>
               <view class="t-record">{{item.active_status}}</view>
               <view class="t-user_text" wx:if="{{item.user_avatar_text}}">{{item.user_avatar_text}}</view>
@@ -64,7 +64,7 @@
 
         <view class='t-cardBottom flex' wx:if='{{item.user_id!=user_id}}'>
           <view class="t-history">看过
-            <label class="t-historyNum">990</label>
+            <label class="t-historyNum">{{item.view_project_count}}</label>
             个项目</view>
           <view class="t-line"></view>
           <view class='t-cardBottomItem1 flex' hover-class='t-hoverColor' hover-stop-propagation='true' data-id='{{item.user_id}}' catchtap='projectPush'>
