--- a/Weitianshi/pages/myProject/projectDetail/projectDetail.wxss
+++ b/Weitianshi/pages/myProject/projectDetail/projectDetail.wxss
@@ -47,9 +47,11 @@ page {
 .sort {
   display: flex;
 }
-.media123{
+
+.media123 {
   background: #f2f3f4;
 }
+
 /*others的卡片*/
 
 .others {
@@ -229,6 +231,8 @@ page {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  /* word-break: break-all;
+  flex-wrap: wrap; */
 }
 
 .allProjectDetail {
@@ -1739,6 +1743,15 @@ page {
 #productBox .productContent {
   margin-top: 20rpx;
   text-align: left;
+  overflow: hidden;
+  text-overflow: -o-ellipsis-lastline;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  font-size: 12px;
+  color: #666;
+  line-height: 44rpx;
 }
 
 #productBox .projectTips {
@@ -1830,7 +1843,7 @@ page {
   width: 100%;
   height: 100%;
   background: #f2f3f4;
-  padding: 0 ;
+  padding: 0;
 }
 
 #introduce {
@@ -2176,13 +2189,13 @@ page {
 }
 
 .media12 {
-  height:1000rpx;
-   background: #fff; 
-  padding: 0 30rpx;
+  /* height: 1000rpx; */
+  background: #fff;
+  padding: 0 30rpx 20rpx 30rpx;
 }
 
 .matchIntro {
-  text-align: left!important;
+  text-align: left !important;
   font-size: 15px;
   color: #333;
   padding-top: 15rpx;
@@ -2197,16 +2210,18 @@ page {
   text-align: center;
   height: 800rpx;
 }
-.resourceRight{
-  width: 85%;
 
+.resourceRight {
+  width: 85%;
 }
-.resourceLeft{
+
+.resourceLeft {
   width: 8%;
   text-align: right;
 }
-.resourceImg{
+
+.resourceImg {
   width: 62rpx;
   height: 62rpx;
-  margin-top:43rpx; 
+  margin-top: 43rpx;
 }
