--- a/Weitianshi/utils/wxml/projectDetail.wxml
+++ b/Weitianshi/utils/wxml/projectDetail.wxml
@@ -139,7 +139,7 @@
     </view>
     <!--三个tab页  -->
     <include src='/utils/wxml/threeTab.wxml' />
-    <view class="projectScore" wx:if="{{score==true&&show_detail != 1}}" bindtap="projectRemark">项目评价</view>
+    <!-- <view class="projectScore" wx:if="{{score==true&&show_detail != 1}}" bindtap="projectRemark">项目评价</view> -->
     <!--申请查看未能过-->
     <view class="lockStyle"  wx:if="{{show_detail != 1}}">
     <image src="/img/img-suozhu@2x.png" class="lockImg"></image>
@@ -178,14 +178,14 @@
 </view>
 <!--下面的浮动按钮-->
 <view class="floatBtn" wx:if="{{button_type != 1}}">
-  <view class="accreditation flex" wx:if="{{status == 0 ||status ==3}}">
+  <!-- <view class="accreditation flex" wx:if="{{status == 0 ||status ==3}}">
     <view>认证投资人、买家FA才可申请查看</view>
     <view class="toAccreditation" bindtap="toAccreditation">立即认证</view>
   </view>
   <view class="accreditation flex" wx:if="{{status == 5 &&button_type == 3}}">
     <view>认证投资人、买家FA才可申请查看</view>
     <view class="toAccreditation identitym" bindtap="toAccreditation">立即认证</view>
-  </view>
+  </view> -->
   <!-- <view class="push project-applicationm" bindtap="applyProject" wx:if="{{button_type == 3}}" data-project="{{id}}">申请查看</view>
   <view class="push project-applicationm" bindtap="applyProject" wx:if="{{button_type == 2}}" data-project="{{id}}">重新申请</view> -->
   <!-- <view class="pushing" wx:if="{{button_type == 0}}">申请中</view> -->
