--- a/Weitianshi/utils/wxss/oneadd.wxss
+++ b/Weitianshi/utils/wxss/oneadd.wxss
@@ -46,9 +46,53 @@
   overflow: hidden;
 }
 
+#productBox .projectTips {
+  position: absolute;
+  right: 10rpx;
+  margin: 0;
+  height: 30rpx;
+  line-height: 30rpx;
+  top: 40rpx;
+}
+
+#productBox .productTitle {
+  font-size: 30rpx;
+  color: #333;
+  /* line-height: 30rpx; */
+  text-align: left;
+  width: 180px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+#productBox  .pro_sort {
+  font-size: 20rpx;
+  color: #293b55;
+  border-radius: 56rpx;
+  border: 1rpx solid #293b55;
+  text-align: center;
+  height: 48rpx;
+  width: auto;
+  line-height: 48rpx;
+  padding: 4rpx 8rpx;
+  margin-right: 24rpx;
+  flex-wrap: nowrap;
+  white-space: nowrap;
+  margin-bottom: 18rpx;
+}
+
 #productBox .productContent {
   margin-top: 20rpx;
   text-align: left;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  font-size: 12px;
+  color: #666;
+  line-height: 44rpx;
 }
 
 #productBox .projectTips {
@@ -114,16 +158,16 @@
   margin-top: 12rpx;
 }
 
+#investHistory:last-of-type .invest {
+  border: none;
+  padding: 0;
+}
+
 #investHistory .invest {
   width: 73%;
   height: auto;
   padding-bottom: 52rpx;
   border-left: 1px solid #f0f0f0;
-}
-
-#investHistory:last-of-type .invest {
-  border: none;
-  padding: 0;
 }
 
 #investHistory .case_pic {
@@ -509,6 +553,7 @@
   top: 16rpx;
   left: 48rpx;
 }
+
 .t-shopPic1 {
   width: 38rpx;
   height: 36rpx;
@@ -516,6 +561,7 @@
   top: 16rpx;
   left: 66rpx;
 }
+
 .t-shopBlock {
   width: 100%;
   text-align: center;
@@ -544,7 +590,9 @@
   position: relative;
   background: #fff;
 }
+
 /*详情中约谈  */
-.t-yuetan{
+
+.t-yuetan {
   background: #fafafa;
 }
